feat: 재생바 보이게 수정

--- a/music_SecondRun.html
+++ b/music_SecondRun.html
@@ -71,8 +71,9 @@
             z-index: 1;
         }
 
+        /* 이정도 픽셀로 설정해야 위젯창에서 재생바가 보임 */
         #player-track.active {
-            top: -92px;
+            top: -110px;
         }
 
         #album-name {
@@ -347,7 +348,7 @@
             </div>
             <div id="player-content">
                 <div id="album-art">
-                    <img src="https://i.imgur.com/wRUVzcW.jpg"
+                    <img src="https://raw.githubusercontent.com/Seung-zedd/MusicPlayer/main/테일즈위버_SecondRun.jpg"
                         class="active" id="_1">
 
                     <div id="buffer-box">Buffering ...</div>
@@ -408,7 +409,7 @@
                 buffInterval = null,
                 tFlag = false,
                 albums = [
-                    "테일즈위버 OST - Second Run.mp3",
+                    "테일즈위버 OST - Second Run",
 
                 ],
                 w
