feat: background-color 코발트 블루로 색상 변경

--- a/music_SecondRun.html
+++ b/music_SecondRun.html
@@ -65,7 +65,7 @@
             right: 15px;
             left: 15px;
             padding: 13px 22px 10px 184px;
-            background-color: #fbf3da;
+            background-color: #7da7cd;
             border-radius: 15px 15px 0 0;
             transition: 0.3s ease top;
             z-index: 1;
