--- a/music_SecondRun.html
+++ b/music_SecondRun.html
@@ -10,13 +10,11 @@
     *:focus {
       outline: none;
     }
-
     body {
       font-family: 'Courier New';
       margin: 0;
       background-color: #fff;
     }
-
     #app-cover {
       position: fixed;
       top: 35%;
@@ -26,7 +24,6 @@
       height: 100px;
       margin: -4px auto;
     }
-
     #bg-artwork {
       position: fixed;
       top: -30px;
@@ -41,7 +38,6 @@
       -webkit-filter: blur(40px);
       z-index: 1;
     }
-
     #bg-layer {
       position: fixed;
       top: 0;
@@ -52,13 +48,11 @@
       opacity: 0.51;
       z-index: 2;
     }
-
     #player {
       position: relative;
       height: 100%;
       z-index: 3;
     }
-
     #player-track {
       position: absolute;
       top: 0;
@@ -70,37 +64,30 @@
       transition: 0.3s ease top;
       z-index: 1;
     }
-
     #player-track.active {
       top: -110px;
     }
-
     #album-name {
       color: #54576f;
       font-size: 17px;
       font-weight: bold;
     }
-
     #track-name {
       color: #FFB40F;
       font-size: 13px;
       margin: 2px 0 13px 0;
     }
-
     #track-time {
       height: 12px;
       margin-bottom: 3px;
       overflow: hidden;
     }
-
     #current-time {
       float: left;
     }
-
     #track-length {
       float: right;
     }
-
     #current-time,
     #track-length {
       color: transparent;
@@ -109,13 +96,11 @@
       border-radius: 10px;
       transition: 0.3s ease all;
     }
-
     #track-time.active #current-time,
     #track-time.active #track-length {
       color: #f86d92;
       background-color: transparent;
     }
-
     #s-area,
     #seek-bar {
       position: relative;
@@ -123,12 +108,10 @@
       border-radius: 4px;
       display: block;
     }
-
     #s-area {
       background-color: #FFB40F;
       cursor: pointer;
     }
-
     #ins-time {
       position: absolute;
       top: -29px;
@@ -139,7 +122,6 @@
       border-radius: 4px;
       display: none;
     }
-
     #s-hover {
       position: absolute;
       top: 0;
@@ -148,12 +130,10 @@
       opacity: 0.2;
       z-index: 2;
     }
-
     #ins-time,
     #s-hover {
       background-color: #3b3d50;
     }
-
     #seek-bar {
       content: "";
       position: absolute;
@@ -165,7 +145,6 @@
       transition: 0.2s ease width;
       z-index: 1;
     }
-
     #player-content {
       position: relative;
       height: 100%;
@@ -174,7 +153,6 @@
       border-radius: 10px;
       z-index: 2;
     }
-
     #album-art {
       position: absolute;
       top: -40px;
@@ -187,12 +165,10 @@
       border-radius: 50%;
       overflow: hidden;
     }
-
     #album-art.active {
       top: -60px;
       box-shadow: 0 0 0 4px #fff7f7, 0 30px 50px -15px #afb7c1;
     }
-
     #album-art:before {
       content: "";
       position: absolute;
@@ -207,7 +183,6 @@
       box-shadow: inset 0 0 0 2px #fff;
       z-index: 2;
     }
-
     #album-art img {
       display: block;
       position: absolute;
@@ -218,27 +193,22 @@
       opacity: 0;
       z-index: -1;
     }
-
     #album-art img.active {
       opacity: 1;
       z-index: 1;
     }
-
     #album-art.active img.active {
       z-index: 1;
       animation: rotateAlbumArt 3s linear 0s infinite forwards;
     }
-
     @keyframes rotateAlbumArt {
       0% {
         transform: rotateZ(0);
       }
-
       100% {
         transform: rotateZ(360deg);
       }
     }
-
     #buffer-box {
       position: absolute;
       top: 50%;
@@ -257,26 +227,21 @@
       opacity: 0;
       z-index: 2;
     }
-
     #album-art img,
     #buffer-box {
       transition: 0.1s linear all;
     }
-
     #album-art.buffering img {
       opacity: 0.25;
     }
-
     #album-art.buffering img.active {
       opacity: 0.8;
       filter: blur(2px);
       -webkit-filter: blur(2px);
     }
-
     #album-art.buffering #buffer-box {
       opacity: 1;
     }
-
     #player-controls {
       width: 250px;
       height: 100%;
@@ -284,13 +249,11 @@
       float: right;
       overflow: hidden;
     }
-
     .control {
       width: 33.333%;
       float: left;
       padding: 12px 0;
     }
-
     .button {
       width: 26px;
       height: 26px;
@@ -299,7 +262,6 @@
       border-radius: 6px;
       cursor: pointer;
     }
-
     .button i {
       display: block;
       color: #d6dee7;
@@ -307,16 +269,13 @@
       text-align: center;
       line-height: 1;
     }
-
     .button,
     .button i {
       transition: 0.2s ease all;
     }
-
     .button:hover {
       background-color: #d6d6de;
     }
-
     .button:hover i {
       color: #fff;
     }
@@ -347,7 +306,7 @@
       </div>
       <div id="player-content">
         <div id="album-art">
-          <img src="https://raw.githubusercontent.com/Seung-zedd/MusicPlayer/main/테일즈위버_SecondRun.jpg" class="active"
+          <img src="https://raw.githubusercontent.com/Seung-zedd/MusicPlayer/main/SecondRun.jpg" class="active"
             id="_1">
 
           <div id="buffer-box">Buffering ...</div>
@@ -407,16 +366,14 @@
         nTime = 0,
         buffInterval = null,
         tFlag = false,
-        albums = ["테일즈위버 OST - Second Run"],
+        albums = ["Tales-weaver OST - Second Run"],
         w
       trackNames = [
         "Tales-weaver-OST"
       ],
-
         albumArtworks = ["_1"],
-
         trackUrl = [
-          "https://raw.githubusercontent.com/Seung-zedd/MusicPlayer/main/테일즈위버 OST - Second Run.mp3"
+          "https://raw.githubusercontent.com/Seung-zedd/MusicPlayer/main/TalesWeaver OST - Second Run.mp3"
         ],
         playPreviousTrackButton = $("#play-previous"),
         playNextTrackButton = $("#play-next"),
@@ -447,72 +404,52 @@
           }
         }, 300);
       }
-
       function showHover(event) {
         seekBarPos = sArea.offset();
         seekT = event.clientX - seekBarPos.left;
         seekLoc = audio.duration * (seekT / sArea.outerWidth());
-
         sHover.width(seekT);
-
         cM = seekLoc / 60;
-
         ctMinutes = Math.floor(cM);
         ctSeconds = Math.floor(seekLoc - ctMinutes * 60);
 
         if (ctMinutes < 0 || ctSeconds < 0) return;
-
         if (ctMinutes < 0 || ctSeconds < 0) return;
-
         if (ctMinutes < 10) ctMinutes = "0" + ctMinutes;
         if (ctSeconds < 10) ctSeconds = "0" + ctSeconds;
-
         if (isNaN(ctMinutes) || isNaN(ctSeconds)) insTime.text("--:--");
         else insTime.text(ctMinutes + ":" + ctSeconds);
-
         insTime.css({ left: seekT, "margin-left": "-21px" }).fadeIn(0);
       }
-
       function hideHover() {
         sHover.width(0);
         insTime.text("00:00").css({ left: "0px", "margin-left": "0px" }).fadeOut(0);
       }
-
       function playFromClickedPos() {
         audio.currentTime = seekLoc;
         seekBar.width(seekT);
         hideHover();
       }
-
       function updateCurrTime() {
         nTime = new Date();
         nTime = nTime.getTime();
-
         if (!tFlag) {
           tFlag = true;
           trackTime.addClass("active");
         }
-
         curMinutes = Math.floor(audio.currentTime / 60);
         curSeconds = Math.floor(audio.currentTime - curMinutes * 60);
-
         durMinutes = Math.floor(audio.duration / 60);
         durSeconds = Math.floor(audio.duration - durMinutes * 60);
-
         playProgress = (audio.currentTime / audio.duration) * 100;
-
         if (curMinutes < 10) curMinutes = "0" + curMinutes;
         if (curSeconds < 10) curSeconds = "0" + curSeconds;
-
         if (durMinutes < 10) durMinutes = "0" + durMinutes;
         if (durSeconds < 10) durSeconds = "0" + durSeconds;
-
         if (isNaN(curMinutes) || isNaN(curSeconds)) tProgress.text("00:00");
         else tProgress.text(curMinutes + ":" + curSeconds);
-
         if (isNaN(durMinutes) || isNaN(durSeconds)) tTime.text("00:00");
         else tTime.text(durMinutes + ":" + durSeconds);
-
         if (
           isNaN(curMinutes) ||
           isNaN(curSeconds) ||
@@ -521,9 +458,7 @@
         )
           trackTime.removeClass("active");
         else trackTime.addClass("active");
-
         seekBar.width(playProgress + "%");
-
         if (playProgress == 100) {
           i.attr("class", "fa fa-play");
           seekBar.width(0);
@@ -532,86 +467,64 @@
           clearInterval(buffInterval);
         }
       }
-
       function checkBuffering() {
         clearInterval(buffInterval);
         buffInterval = setInterval(function () {
           if (nTime == 0 || bTime - nTime > 1000) albumArt.addClass("buffering");
           else albumArt.removeClass("buffering");
-
           bTime = new Date();
           bTime = bTime.getTime();
         }, 100);
       }
-
       function selectTrack(flag) {
         if (flag == 0 || flag == 1) ++currIndex;
         else --currIndex;
-
         if (currIndex > -1 && currIndex < albumArtworks.length) {
           if (flag == 0) i.attr("class", "fa fa-play");
           else {
             albumArt.removeClass("buffering");
             i.attr("class", "fa fa-pause");
           }
-
           seekBar.width(0);
           trackTime.removeClass("active");
           tProgress.text("00:00");
           tTime.text("00:00");
-
           currAlbum = albums[currIndex];
           currTrackName = trackNames[currIndex];
           currArtwork = albumArtworks[currIndex];
-
           audio.src = trackUrl[currIndex];
-
           nTime = 0;
           bTime = new Date();
           bTime = bTime.getTime();
-
           if (flag != 0) {
             audio.play();
             playerTrack.addClass("active");
             albumArt.addClass("active");
-
             clearInterval(buffInterval);
             checkBuffering();
           }
-
           albumName.text(currAlbum);
           trackName.text(currTrackName);
           albumArt.find("img.active").removeClass("active");
           $("#" + currArtwork).addClass("active");
-
           bgArtworkUrl = $("#" + currArtwork).attr("src");
-
           bgArtwork.css({ "background-image": "url(" + bgArtworkUrl + ")" });
         } else {
           if (flag == 0 || flag == 1) --currIndex;
           else ++currIndex;
         }
       }
-
       function initPlayer() {
         audio = new Audio();
-
         selectTrack(0);
-
         audio.loop = true;
-
         playPauseButton.on("click", playPause);
-
         sArea.mousemove(function (event) {
           showHover(event);
         });
-
         sArea.mouseout(hideHover);
-
         sArea.on("click", playFromClickedPos);
-
         $(audio).on("timeupdate", updateCurrTime);
-
         playPreviousTrackButton.on("click", function () {
           selectTrack(-1);
         });
@@ -619,11 +532,8 @@
           selectTrack(1);
         });
       }
-
       initPlayer();
     });
   </script>
-
 </body>
-
 </html>
